# RenderRust

./: .gitignore  README.md  build.sh  dev.sh  start.sh
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: WgpuCanvas.tsx
wgpu_engine/: Cargo.toml
wgpu_engine/src/: lib.rs  shader.wgsl
