[package]
name = "renderrust_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "RenderRust - High-performance 3D rendering engine powered by Rust WASM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/renderrust"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "CanvasRenderingContext2d",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0"
log = "0.4"

[features]
default = ["console_error_panic_hook"]
